tests/NormalTests/paczka1/fuzzy1/33359155.err
Error in line 8: Xcso0zCN S697 65,1
Error in line 14: 1J7wzLIGr S697 477,2
Error in line 20: M14f S173 2,3
Error in line 26: M14f S466 66,5
Error in line 24: kLEVfGV8G8 S173 32,5
Error in line 31: M14f S173 97,2
